# src/routes/authRoute.js
@@ -1,4 +1,6 @@
-import { Router } from "express";
+import {
+  Router
+} from "express";
 import {
   signupController,
   signinController,
@@ -6,14 +8,22 @@ import {
   passwordResetController,
   passwordResetConfirmationController
 } from "../controllers/authController";
-import { signinAuth, verifyToken } from "../middlewares/authMiddleware";
-import { verifyAdmin } from "../lib/authenticate";
+import {
+  signinAuth,
+  verifyToken
+} from "../middlewares/authMiddleware";
+import {
+  checkSubscription
+} from '../middlewares/paymentMiddleware';
+import {
+  verifyAdmin
+} from "../lib/authenticate";
 
 const authRouter = Router();
 
 authRouter.post("/signup", signupController);
 authRouter.get("/validate", verifyToken, signUpValidationController);
-authRouter.post("/signin", signinAuth, signinController);
+authRouter.post("/signin", signinAuth, checkSubscription, signinController);
 authRouter.post("/reset-password", passwordResetController);
 authRouter.put("/reset-password", verifyToken, passwordResetConfirmationController)
 authRouter.post("/admin/signin", signinAuth, verifyAdmin, signinController);
